# skill-time-series-analysis

./: .gitignore  LICENSE  README.en.md  README.md  SKILL.md  pyproject.toml
agents/: cursor-rule.mdc  openai.yaml  portable-loader.md
references/: anti-patterns.md  api.md  interpretation.md  report-format.md  workflow.md
reports/: README.md
reports/panda_data_futures/: multi_symbol_factors_tail.csv  multi_symbol_futures_timeseries.md
reports/panda_data_futures/CU_DOMINANT_SHF/: CU_DOMINANT_SHF_time_series_report.md
reports/panda_data_futures/IF_DOMINANT_CFE/: IF_DOMINANT_CFE_time_series_report.md
reports/panda_data_futures/I_DOMINANT_DCE/: I_DOMINANT_DCE_time_series_report.md
reports/time_series_examples/demo_pair/: demo_pair_cointegration_report.md
reports/time_series_examples/demo_spread/: demo_spread_spread_report.md
src/skill_time_series_analysis/: __init__.py  analysis.py  factors.py  reporting.py  types.py
tests/: test_analysis.py  test_factors.py  test_panda_data_futures_report.py  test_public_api_contract.py  test_readme.py  test_reporting.py
