[project]
name = "skill-time-series-analysis"
version = "0.1.0"
description = "QuantSkills time-series analysis skill with runnable Python diagnostics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib",
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "seaborn",
    "statsmodels",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_time_series_analysis"]
dev-mode-dirs = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "B905", "SIM108", "B028"]

[tool.ruff.lint.isort]
known-first-party = ["skill_time_series_analysis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests that call external services or real data providers",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.15.0",
    "pyyaml>=6.0.0",
    "panda-data>=0.0.9",
    "requests>=2.34.2",
]
